# BorderMatting

./: CMakeLists.txt  setup.sh
include/: BorderMatting.h  Information.h
src/: BorderMatting.cpp  main.cpp
